WIP - further gui/general improvements